--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,14 @@ p, ul, li, div {
     padding: 10px;
 }
 
+#needsrotate {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
 footer {
     position: relative;
     left: 0;
